Update index.html with meta description and confirm download link text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="View and download the Health-Life Optimization PDF"
+    />
     <title>Health-Life Optimization</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -38,7 +42,7 @@
           <!-- Direct download link -->
           <div class="download-link">
             <a href="assets/Health-Life optimization.pdf" download
-              >Full screen</a
+              >Download PDF</a
             >
           </div>
         </div>
